--- a/eureka-server-governator/build.gradle
+++ b/eureka-server-governator/build.gradle
@@ -6,11 +6,9 @@ dependencies {
     compile project(':eureka-client')
     compile "com.netflix.governator:governator:${governatorVersion}"
     compile "com.netflix.governator:governator-servlet:${governatorVersion}"
-    compile "com.sun.jersey:jersey-server:${jerseyVersion}"
-    compile "com.sun.jersey:jersey-servlet:${jerseyVersion}"
-    compile "com.sun.jersey.contribs:jersey-guice:${jerseyVersion}"
-
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.30.1'
+    compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
+    compile "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
+    compile "com.sun.jersey.contribs:jersey-guice:1.19.4"
 
 
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
@@ -18,7 +16,7 @@ dependencies {
     providedCompile "javax.servlet:servlet-api:${servletVersion}"
 
     testCompile project(':eureka-test-utils')
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.mockito:mockito-core:${mockitoVersion}'
     testCompile "org.eclipse.jetty:jetty-server:${jetty_version}"
     testCompile "org.eclipse.jetty:jetty-webapp:${jetty_version}"
 }
