--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -4,8 +4,8 @@ dependencies {
     compile project(':eureka-client')
     compile project(':eureka-core')
     runtime 'xerces:xercesImpl:2.4.0'
-    compile "com.sun.jersey:jersey-server:$jerseyVersion"
-    compile "com.sun.jersey:jersey-servlet:$jerseyVersion"
+    compile "org.glassfish.jersey.core:jersey-server:$jerseyVersion"
+//    compile "com.sun.jersey:jersey-servlet:$jerseyVersion"
     compile 'org.slf4j:slf4j-log4j12:1.6.1'
     runtime 'org.codehaus.jettison:jettison:1.2' 
     providedCompile "javax.servlet:servlet-api:$servletVersion"
